<resources>
    <string name="app_name">491B Project</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Recipe Terms-->
    <string name="Calories"> Calories</string>
    <string name="Protein"> Protein</string>
    <string name="Ingredients">Ingredients</string>
    <string name="Instructions">Instructions</string>
    <string name="Nutrition">Nutrition</string>
    <string name="RecipeID">recipeID</string>
    <string name="RecipeTitle">recipeTitle</string>
    <string name="AuthorID">authorID</string>
    <string name="AuthorStr">Created By</string>
    <string name="lastUpdatedStr">Last updated on:</string>
    <string name="sampleDateStr">11/21/20</string>
    <string name="descriptionStr">Description</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user_firebase_recipes">UserFirebaseRecipesActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="delete_selected_recipes">Delete</string>

    <!-- Recipe Search Activity -->
    <string name="hint_recipe_input">Enter name of a recipe</string>
    <string name="hint_recipe_ingredient">Enter name of a ingredient</string>
    <string name="hint_create_recipe_title">Enter your recipe\'s name here</string>
    <string name="hint_enter_instruction">Enter your instruction here</string>
    <string name="hint_enter_ingredients">Enter ingredient name here</string>
    <string name="hint_enter_amount">Enter amount here</string>
    <string name="hint_enter_unit">Units: e.g. grams</string>
    <string name="hint_create_description">Enter your description here.</string>
    <string name="create_recipe_header">Create your Recipe</string>
    <string name="update_recipe_header">Update your Recipe</string>
    <string name="btn_recipe_search">SEARCH</string>
    <string name="btn_create_recipe">Create Recipe</string>
    <string name="btn_update_recipe">Update Recipe</string>
    <string name="btn_add_ingredient">Add Ingredient</string>
    <string name="btn_add_step">Add Step</string>

    <string name="StepNumberHeader">Step:</string>
    <string name="placeHolder_InstructionStepNumber">Step: __</string>
    <string name="placeholder_loremIpsum">"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,
        but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing
        Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="title_activity_create_firebase_recipe">CreateFirebaseRecipeActivity</string>

</resources>