<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragments.RecipeAboutFragment">

    <TextView
        android:id="@+id/tvLastUpdatedStr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_red_background"
        android:padding="8sp"
        android:text="@string/lastUpdatedStr"
        android:textColor="@android:color/primary_text_light"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLastUpdatedData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_background"
        android:gravity="center"
        android:padding="8sp"
        android:text="@string/sampleDateStr"
        android:textColor="@color/material_on_surface_emphasis_high_type"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvLastUpdatedStr"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDescriptionStr"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_red_background"
        android:gravity="center"
        android:text="@string/descriptionStr"
        android:textColor="@android:color/primary_text_light"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLastUpdatedData" />

    <TextView
        android:id="@+id/tvDescriptionData"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingBottom="4dp"
        android:text="@string/placeholder_loremIpsum"
        app:autoSizeMaxTextSize="32sp"
        app:autoSizeMinTextSize="8sp"
        app:autoSizeStepGranularity="4sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescriptionStr"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>