<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CreateIngredientsFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCreateRecipeIngredients"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/text_margin"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_background"
        android:padding="@dimen/text_margin"
        app:layout_constraintBottom_toTopOf="@+id/etCreateRecipeIngredientName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etCreateRecipeIngredientName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:ems="10"
        android:hint="@string/hint_enter_ingredients"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/etCreateRecipeIngredientAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etCreateRecipeIngredientAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:ems="10"
        android:hint="@string/hint_enter_amount"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/etCreateRecipeIngredientUnit"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etCreateRecipeIngredientUnit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:ems="10"
        android:hint="@string/hint_enter_unit"
        android:inputType="textShortMessage"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCreateRecipeAddIngredient"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_margin="@dimen/text_margin"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/navy"
        android:text="@string/btn_add_ingredient"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etCreateRecipeIngredientUnit"
        app:layout_constraintTop_toBottomOf="@+id/etCreateRecipeIngredientName" />
</androidx.constraintlayout.widget.ConstraintLayout>